# lox

./: .gitignore  Cargo.toml  LICENSE  README.md  observer.txt  perf.man.txt  profile.json
benches/: binary_trees.lox  equality.lox  fib.lox  instantiation.lox  invocation.lox  method_call.lox  properties.lox  string_equality.lox  trees.lox  zoo.lox  zoo_batch.lox
lox_test/scanning/: numbers2.lox
lox_test/string/: unterminated.lox
lox_test/zzz/: grouping.lox  open_block.lox  scope_global.lox  scope_local.lox
lox_test_mine/break/: at_top_level.lox  in_loop.lox  outside_loop.lox
lox_test_mine/continue/: at_top_level.lox  in_loop.lox  outside_loop.lox
others/: bench_script.py  test-script.py  test.rs
src/: alias.rs  benches.rs  common.rs  environment.rs  environment2.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  native.rs  parser.rs  parser_expr.rs  parser_stmt.rs  resolver.rs  run.rs  tiny_vec.rs  tokens.rs  value.rs
src/interpreter/: environment.rs  interpreter.rs  mod.rs  native_functions.rs  types.rs
src/parser/: keywords.rs  lexer.rs  mod.rs  parser.rs  position.rs  resolver.rs  scanner.rs  tokens.rs  types.rs
src/utils/: circular_buffer.rs  mod.rs  peekable_iterator.rs  rc_cache.rs  stack.rs  utils.rs
