[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unique_id = "0.1.5"
once_cell = "1.18.0"
string-interner = "0.14.0"
rustc-hash = "1.1.0"

[profile.release]
lto = "fat"
opt-level = 3
